updated nav-bar completely, changed background and text color

--- a/app/join.html
+++ b/app/join.html
@@ -15,20 +15,13 @@
 		<link rel="stylesheet" href="stylesheets/foundation.css">
 		<link rel="stylesheet" href="stylesheets/app.css">
 		<script src="javascripts/modernizr.foundation.js"></script>
-		<script type="text/javascript" src="https://raw.github.com/kevinburke/tecate/master/tecate.js"></script>
 </head>
 <body>
 		<div class="header">
 			<div class="row">
-				<div class="four columns">
-					<div class="logo-container">
-						<h5>Logo Goes Here</h5>
-					</div>
-				</div>
-				<div class="eight columns">
-					<div class="tagline-container">
-						<h5>Tag Line Here</h5>
-					</div>
+
+				<div class="logo-container">
+					<div class="eight columns end"></div>
 				</div>
 			</div>
 			<div class="row">
@@ -44,9 +37,15 @@
 									<span></span>
 								</a>
 								<ul class="flyout">
-									<li><a href="why.html">Why</a></li>
-									<li><a href="who.html">Who We Are</a></li>
-									<li><a href="schedule.html">Festival Schedule</a></li>
+									<li>
+										<a href="why.html">Why</a>
+									</li>
+									<li>
+										<a href="who.html">Who We Are</a>
+									</li>
+									<li>
+										<a href="schedule.html">Festival Schedule</a>
+									</li>
 								</ul>
 							</li>
 							<li class="has-flyout nav-item">
@@ -55,8 +54,12 @@
 									<span></span>
 								</a>
 								<ul class="flyout">
-									<li><a href="instructions.html">Instructions</a></li>
-									<li><a href="upload.html">Upload</a></li>
+									<li>
+										<a href="instructions.html">Instructions</a>
+									</li>
+									<li>
+										<a href="upload.html">Upload</a>
+									</li>
 								</ul>
 							</li>
 							<li class="nav-item">
@@ -78,11 +81,26 @@
 						<h1>Join Us</h1>
 					</div>
 				</div>
-			</div>			
+			</div>
+			<div class= "row">
+				<div class="six columns end">
+					<p>
+						Interested in what we are doing and want to remain up to date on our happenings and projects we care about? Joing our mailing list here: HYPERLINK TO SIGN UP FORM
+					</p>
+				</div>
+			</div>
+			<div class="row vert-pad">
+				<div class="six columns end">
+					<p>
+						Want to help out? Sign up to volunteer and hear more about opportunities beyond the film festival. Lorem ipsum dolor sit amet, nobis reformidans est ei, no est movet zril dissentiunt. Has soluta mandamus praesent et, quodsi moderatius te cum, eirmod conceptam eu vel. Alia dicta propriae duo no, virtute adversarium accommodare sit ea.
+					</p>
+				</div>
+			</div>
+
 		</div>
 
 		<script src="javascripts/jquery.js"></script>
 		<script src="javascripts/foundation.min.js"></script>
 		<script src="javascripts/app.js"></script>
 </body>
-</html>
+	</html>
