--- a/app/schedule.html
+++ b/app/schedule.html
@@ -19,15 +19,8 @@
 <body>
 		<div class="header">
 			<div class="row">
-				<div class="four columns">
-					<div class="logo-container">
-						<h5>Logo Goes Here</h5>
-					</div>
-				</div>
-				<div class="eight columns">
-					<div class="tagline-container">
-						<h5>Tag Line Here</h5>
-					</div>
+				<div class="eight columns end">
+					<div class="logo-container"></div>
 				</div>
 			</div>
 			<div class="row">
@@ -38,14 +31,20 @@
 								<a href="index.html">Home</a>
 							</li>
 							<li class="has-flyout nav-item active">
-									<a href="about.html">About</a>
-									<a href="about.html" class="flyout-toggle">
-										<span></span>
-									</a>
+								<a href="about.html">About</a>
+								<a href="about.html" class="flyout-toggle">
+									<span></span>
+								</a>
 								<ul class="flyout">
-									<li><a href="why.html">Why</a></li>
-									<li><a href="who.html">Who We Are</a></li>
-									<li><a href="schedule.html">Festival Schedule</a></li>
+									<li>
+										<a href="why.html">Why</a>
+									</li>
+									<li>
+										<a href="who.html">Who We Are</a>
+									</li>
+									<li>
+										<a href="schedule.html">Festival Schedule</a>
+									</li>
 								</ul>
 							</li>
 							<li class="has-flyout nav-item">
@@ -54,11 +53,15 @@
 									<span></span>
 								</a>
 								<ul class="flyout">
-									<li><a href="instructions.html">Instructions</a></li>
-									<li><a href="upload.html">Upload</a></li>
+									<li>
+										<a href="instructions.html">Instructions</a>
+									</li>
+									<li>
+										<a href="upload.html">Upload</a>
+									</li>
 								</ul>
 							</li>
-						
+
 							<li class="nav-item">
 								<a href="partners.html">Partners</a>
 							</li>
@@ -73,46 +76,53 @@
 
 		<div class="content-container">
 			<div class="row">
-				<div class="twelve columns">
-				</div>
-			</div>			
+				<div class="twelve columns"></div>
+			</div>
 		</div>
-<div class="row">
-  <div class="twelve columns">
-    <h5>Saturday July 6, 2013</h5>
-    <h5>Location TBD</h5>
-    <h5>7pm-10pm, with live performance by XX after premier</h5>
-    <h5>RSVP on Facebook here!</h5>
-</div>
-</div>
-<div class="row">
-<div class="twelve columns">
-	<h4>Feature Film</h4>
-	<p class="strong">Title of Film (time)</p>
-	<p>This is the description of the film.Lorem ipsum dolor sit amet, graeco dissentiet est ea, et ius atqui oporteat. Eros cibo melius cu mel. Cu illud ceteros liberavisse pri. In mnesarchum quaerendum sea, vis natum quaeque salutandi et. Eum adhuc luptatum scriptorem id, an cum wisi tantas. Ubique docendi sensibus quo ex, usu in minim atomorum quaerendum, has id possit eripuit.</p>
-	</div>
-</div>
-<div class="row">
-	<div class="twelve columns">
-<h4> Short Films</h4>
-<p class="strong">Title of Film (time)</p>
-<p>This is the description of the film.Lorem ipsum dolor sit amet, graeco dissentiet est ea, et ius atqui oporteat. Eros cibo melius cu mel. Cu illud ceteros liberavisse pri. In mnesarchum quaerendum sea, vis natum quaeque salutandi et. Eum adhuc luptatum scriptorem id, an cum wisi tantas. Ubique docendi sensibus quo ex, usu in minim atomorum quaerendum, has id possit eripuit.</p>
-	</div>
-</div>
-<div class="row vert-pad">
-	<div class="twelve columns">
-<p class="strong">Title of Film (time)</p>
-<p>This is the description of the film.Lorem ipsum dolor sit amet, graeco dissentiet est ea, et ius atqui oporteat. Eros cibo melius cu mel. Cu illud ceteros liberavisse pri. In mnesarchum quaerendum sea, vis natum quaeque salutandi et. Eum adhuc luptatum scriptorem id, an cum wisi tantas. Ubique docendi sensibus quo ex, usu in minim atomorum quaerendum, has id possit eripuit.</p>
-	</div>
-</div>
-<div class="row">
-	<div class="twelve columns">
-<p class="strong">Title of Film (time)</p>
-<p>This is the description of the film.Lorem ipsum dolor sit amet, graeco dissentiet est ea, et ius atqui oporteat. Eros cibo melius cu mel. Cu illud ceteros liberavisse pri. In mnesarchum quaerendum sea, vis natum quaeque salutandi et. Eum adhuc luptatum scriptorem id, an cum wisi tantas. Ubique docendi sensibus quo ex, usu in minim atomorum quaerendum, has id possit eripuit.</p>
-	</div>
-</div>
+		<div class="row">
+			<div class="twelve columns">
+				<h5>Saturday July 6, 2013</h5>
+				<h5>Location TBD</h5>
+				<h5>7pm-10pm, with live performance by XX after premier</h5>
+				<h5>RSVP on Facebook here!</h5>
+			</div>
+		</div>
+		<div class="row">
+			<div class="twelve columns">
+				<h4>Feature Film</h4>
+				<h5>Title of Film (time)</h5>
+				<p>
+					This is the description of the film.Lorem ipsum dolor sit amet, graeco dissentiet est ea, et ius atqui oporteat. Eros cibo melius cu mel. Cu illud ceteros liberavisse pri. In mnesarchum quaerendum sea, vis natum quaeque salutandi et. Eum adhuc luptatum scriptorem id, an cum wisi tantas. Ubique docendi sensibus quo ex, usu in minim atomorum quaerendum, has id possit eripuit.
+				</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="twelve columns">
+				<h4>Short Films</h4>
+				<p class="strong">Title of Film (time)</p>
+				<p>
+					This is the description of the film.Lorem ipsum dolor sit amet, graeco dissentiet est ea, et ius atqui oporteat. Eros cibo melius cu mel. Cu illud ceteros liberavisse pri. In mnesarchum quaerendum sea, vis natum quaeque salutandi et. Eum adhuc luptatum scriptorem id, an cum wisi tantas. Ubique docendi sensibus quo ex, usu in minim atomorum quaerendum, has id possit eripuit.
+				</p>
+			</div>
+		</div>
+		<div class="row vert-pad">
+			<div class="twelve columns">
+				<p class="strong">Title of Film (time)</p>
+				<p>
+					This is the description of the film.Lorem ipsum dolor sit amet, graeco dissentiet est ea, et ius atqui oporteat. Eros cibo melius cu mel. Cu illud ceteros liberavisse pri. In mnesarchum quaerendum sea, vis natum quaeque salutandi et. Eum adhuc luptatum scriptorem id, an cum wisi tantas. Ubique docendi sensibus quo ex, usu in minim atomorum quaerendum, has id possit eripuit.
+				</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="twelve columns">
+				<p class="strong">Title of Film (time)</p>
+				<p>
+					This is the description of the film.Lorem ipsum dolor sit amet, graeco dissentiet est ea, et ius atqui oporteat. Eros cibo melius cu mel. Cu illud ceteros liberavisse pri. In mnesarchum quaerendum sea, vis natum quaeque salutandi et. Eum adhuc luptatum scriptorem id, an cum wisi tantas. Ubique docendi sensibus quo ex, usu in minim atomorum quaerendum, has id possit eripuit.
+				</p>
+			</div>
+		</div>
 		<script src="javascripts/jquery.js"></script>
 		<script src="javascripts/foundation.min.js"></script>
 		<script src="javascripts/app.js"></script>
 </body>
-</html>
+	</html>
