--- a/app/upload.html
+++ b/app/upload.html
@@ -19,15 +19,8 @@
 <body>
 		<div class="header">
 			<div class="row">
-				<div class="four columns">
-					<div class="logo-container">
-						<h5>Logo Goes Here</h5>
-					</div>
-				</div>
-				<div class="eight columns">
-					<div class="tagline-container">
-						<h5>Tag Line Here</h5>
-					</div>
+				<div class="eight columns end">
+					<div class="logo-container"></div>
 				</div>
 			</div>
 			<div class="row">
@@ -38,14 +31,20 @@
 								<a href="index.html">Home</a>
 							</li>
 							<li class="has-flyout nav-item">
-									<a href="about.html">About</a>
-									<a href="about.html" class="flyout-toggle">
-										<span></span>
-									</a>
+								<a href="about.html">About</a>
+								<a href="about.html" class="flyout-toggle">
+									<span></span>
+								</a>
 								<ul class="flyout">
-									<li><a href="why.html">Why</a></li>
-									<li><a href="who.html">Who We Are</a></li>
-									<li><a href="schedule.html">Festival Schedule</a></li>
+									<li>
+										<a href="why.html">Why</a>
+									</li>
+									<li>
+										<a href="who.html">Who We Are</a>
+									</li>
+									<li>
+										<a href="schedule.html">Festival Schedule</a>
+									</li>
 								</ul>
 							</li>
 							<li class="has-flyout nav-item active">
@@ -54,11 +53,15 @@
 									<span></span>
 								</a>
 								<ul class="flyout">
-									<li><a href="instructions.html">Instructions</a></li>
-									<li><a href="upload.html">Upload</a></li>
+									<li>
+										<a href="instructions.html">Instructions</a>
+									</li>
+									<li>
+										<a href="upload.html">Upload</a>
+									</li>
 								</ul>
 							</li>
-						
+
 							<li class="nav-item">
 								<a href="partners.html">Partners</a>
 							</li>
@@ -73,37 +76,37 @@
 
 		<div class="content-container">
 			<div class="row">
-				<div class="eleven columns centered">
+				<div class="twelve columns">
 					<div class="content">
 						<h1>Submit Your Video</h1>
 					</div>
 					<h5>Submit Now - hyperlink to form</h5>
-<p>
-	If you are unsure of whether or not you are ready to begin your submission, please read the detailed information below. Also check out our submission Frequently Asked Questions at this link.(HYPERLINK)
-</p>
-<h6>Submission Materials</h6>
-<p>
-	We highly encourage you to submit ALL materials online, including the film itself. However, we will not download film files: all online entries must be hosted by the filmmaker or a third party (ie, Vimeo.com). If online entry is not possible, entrants must submit 2 DVDs (any region, NTSC encouraged). Please DO NOT include ANY promotional materials in your submission.
-</p>
-<h6>Shipping Information</h6>
-<p>
-	If you chose to submit your film by mail you are responsible for all shipping charges to IGOT GHFF and for any customs clearances and/or associated fees and taxes. Entry materials will not be returned.
-</p>
-<h6>Send entries to:</h6>
-<p>
-	IGOT Global Health Film Festival
+					<p>
+						If you are unsure of whether or not you are ready to begin your submission, please read the detailed information below. Also check out our submission Frequently Asked Questions at this link.(HYPERLINK)
+					</p>
+					<h6>Submission Materials</h6>
+					<p>
+						We highly encourage you to submit ALL materials online, including the film itself. However, we will not download film files: all online entries must be hosted by the filmmaker or a third party (ie, Vimeo.com). If online entry is not possible, entrants must submit 2 DVDs (any region, NTSC encouraged). Please DO NOT include ANY promotional materials in your submission.
+					</p>
+					<h6>Shipping Information</h6>
+					<p>
+						If you chose to submit your film by mail you are responsible for all shipping charges to IGOT GHFF and for any customs clearances and/or associated fees and taxes. Entry materials will not be returned.
+					</p>
+					<h6>Send entries to:</h6>
+					<p>
+						IGOT Global Health Film Festival
 2550 23rd Street
 Building 9, 2nd Floor
 San Francisco, CA 94110
 Office: +01 (415) 206-4261
-</p>
+					</p>
 
 				</div>
-			</div>			
+			</div>
 		</div>
 
 		<script src="javascripts/jquery.js"></script>
 		<script src="javascripts/foundation.min.js"></script>
 		<script src="javascripts/app.js"></script>
 </body>
-</html>
+	</html>
