--- a/app/who.html
+++ b/app/who.html
@@ -15,20 +15,12 @@
 		<link rel="stylesheet" href="stylesheets/foundation.css">
 		<link rel="stylesheet" href="stylesheets/app.css">
 		<script src="javascripts/modernizr.foundation.js"></script>
-		<script type="text/javascript" src="https://raw.github.com/kevinburke/tecate/master/tecate.js"></script>
 </head>
 <body>
 		<div class="header">
 			<div class="row">
-				<div class="four columns">
-					<div class="logo-container">
-						<h5>Logo Goes Here</h5>
-					</div>
-				</div>
-				<div class="eight columns">
-					<div class="tagline-container">
-						<h5>Tag Line Here</h5>
-					</div>
+				<div class="eight columns end">
+					<div class="logo-container"></div>
 				</div>
 			</div>
 			<div class="row">
