--- a/app/about.html
+++ b/app/about.html
@@ -15,20 +15,12 @@
 		<link rel="stylesheet" href="stylesheets/foundation.css">
 		<link rel="stylesheet" href="stylesheets/app.css">
 		<script src="javascripts/modernizr.foundation.js"></script>
-		<script type="text/javascript" src="https://raw.github.com/kevinburke/tecate/master/tecate.js"></script>
 </head>
 <body>
 		<div class="header">
 			<div class="row">
-				<div class="four columns">
-					<div class="logo-container">
-						<h5>Logo Goes Here</h5>
-					</div>
-				</div>
-				<div class="eight columns">
-					<div class="tagline-container">
-						<h5>Tag Line Here</h5>
-					</div>
+				<div class="eight columns end">
+					<div class="logo-container vert-pad"></div>
 				</div>
 			</div>
 			<div class="row">
@@ -39,14 +31,20 @@
 								<a href="index.html">Home</a>
 							</li>
 							<li class="has-flyout nav-item active">
-									<a href="about.html">About</a>
-									<a href="about.html" class="flyout-toggle">
-										<span></span>
-									</a>
+								<a href="about.html">About</a>
+								<a href="about.html" class="flyout-toggle">
+									<span></span>
+								</a>
 								<ul class="flyout">
-									<li><a href="why.html">Why</a></li>
-									<li><a href="who.html">Who We Are</a></li>
-									<li><a href="schedule.html">Festival Schedule</a></li>
+									<li>
+										<a href="why.html">Why</a>
+									</li>
+									<li>
+										<a href="who.html">Who We Are</a>
+									</li>
+									<li>
+										<a href="schedule.html">Festival Schedule</a>
+									</li>
 								</ul>
 							</li>
 							<li class="has-flyout nav-item">
@@ -55,11 +53,15 @@
 									<span></span>
 								</a>
 								<ul class="flyout">
-									<li><a href="instructions.html">Instructions</a></li>
-									<li><a href="upload.html">Upload</a></li>
+									<li>
+										<a href="instructions.html">Instructions</a>
+									</li>
+									<li>
+										<a href="upload.html">Upload</a>
+									</li>
 								</ul>
 							</li>
-						
+
 							<li class="nav-item">
 								<a href="partners.html">Partners</a>
 							</li>
@@ -79,11 +81,11 @@
 						<h1>About</h1>
 					</div>
 				</div>
-			</div>			
+			</div>
 		</div>
 
 		<script src="javascripts/jquery.js"></script>
 		<script src="javascripts/foundation.min.js"></script>
 		<script src="javascripts/app.js"></script>
 </body>
-</html>
+	</html>
