--- a/app/index.html
+++ b/app/index.html
@@ -18,17 +18,10 @@
 		<script src="javascripts/modernizr.foundation.js"></script>
 </head>
 <body>
-	<div class="header">
+		<div class="header">
 			<div class="row">
-				<div class="four columns">
-					<div class="logo-container">
-						<h5>Logo Goes Here</h5>
-					</div>
-				</div>
-				<div class="eight columns">
-					<div class="tagline-container">
-						<h5>Tag Line Here</h5>
-					</div>
+				<div class="eight columns end">
+					<div class="logo-container"></div>
 				</div>
 			</div>
 			<div class="row">
@@ -44,9 +37,15 @@
 									<span></span>
 								</a>
 								<ul class="flyout">
-									<li><a href="why.html">Why</a></li>
-									<li><a href="who.html">Who We Are</a></li>
-									<li><a href="schedule.html">Festival Schedule</a></li>
+									<li>
+										<a href="why.html">Why</a>
+									</li>
+									<li>
+										<a href="who.html">Who We Are</a>
+									</li>
+									<li>
+										<a href="schedule.html">Festival Schedule</a>
+									</li>
 								</ul>
 							</li>
 							<li class="has-flyout nav-item">
@@ -55,11 +54,15 @@
 									<span></span>
 								</a>
 								<ul class="flyout">
-									<li><a href="instructions.html">Instructions</a></li>
-									<li><a href="upload.html">Upload</a></li>
+									<li>
+										<a href="instructions.html">Instructions</a>
+									</li>
+									<li>
+										<a href="upload.html">Upload</a>
+									</li>
 								</ul>
 							</li>
-						
+
 							<li class="nav-item">
 								<a href="partners.html">Partners</a>
 							</li>
@@ -76,14 +79,14 @@
 			<div class="row">
 				<div class="twelve columns">
 					<div class="content">
-						<h1>Home page</h1>
+						<h1>Test test test</h1>
 					</div>
 				</div>
-			</div>			
+			</div>
 		</div>
 
 		<script src="javascripts/jquery.js"></script>
 		<script src="javascripts/foundation.min.js"></script>
 		<script src="javascripts/app.js"></script>
 </body>
-</html>
+	</html>
