--- a/app/why.html
+++ b/app/why.html
@@ -19,15 +19,8 @@
 <body>
 		<div class="header">
 			<div class="row">
-				<div class="four columns">
-					<div class="logo-container">
-						<h5>Logo Goes Here</h5>
-					</div>
-				</div>
-				<div class="eight columns">
-					<div class="tagline-container">
-						<h5>Tag Line Here</h5>
-					</div>
+				<div class="eight columns end">
+					<div class="logo-container"></div>
 				</div>
 			</div>
 			<div class="row">
@@ -38,14 +31,20 @@
 								<a href="index.html">Home</a>
 							</li>
 							<li class="has-flyout nav-item active">
-									<a href="about.html">About</a>
-									<a href="about.html" class="flyout-toggle">
-										<span></span>
-									</a>
+								<a href="about.html">About</a>
+								<a href="about.html" class="flyout-toggle">
+									<span></span>
+								</a>
 								<ul class="flyout">
-									<li><a href="why.html">Why</a></li>
-									<li><a href="who.html">Who We Are</a></li>
-									<li><a href="schedule.html">Festival Schedule</a></li>
+									<li>
+										<a href="why.html">Why</a>
+									</li>
+									<li>
+										<a href="who.html">Who We Are</a>
+									</li>
+									<li>
+										<a href="schedule.html">Festival Schedule</a>
+									</li>
 								</ul>
 							</li>
 							<li class="has-flyout nav-item">
@@ -54,11 +53,15 @@
 									<span></span>
 								</a>
 								<ul class="flyout">
-									<li><a href="instructions.html">Instructions</a></li>
-									<li><a href="upload.html">Upload</a></li>
+									<li>
+										<a href="instructions.html">Instructions</a>
+									</li>
+									<li>
+										<a href="upload.html">Upload</a>
+									</li>
 								</ul>
 							</li>
-						
+
 							<li class="nav-item">
 								<a href="partners.html">Partners</a>
 							</li>
@@ -75,60 +78,64 @@
 			<div class="row">
 				<div class="twelve columns">
 					<div class="content">
-						<h4>Why we are here!</h4>
+						<h4>Why we are here</h4>
 					</div>
 				</div>
-			</div>			
+			</div>
 		</div>
-<div class="row vert-pad">
-	<div class="twelve columns">
-		<p>Film festivals have the power to bring issues to life, to connect people and motivate the masses.  If the saying “a picture is worth a thousand words” we are hoping a video is worth a million!  
-The Global Health Film Festival is an attempt to bring neglected global health issues to light.  The films and organizations supporting the festival are dedicated to awareness, advocacy and activism to ensure that the below issues have platforms on the greater health agenda locally and globally:</p>
-	</div>
-</div>
-<div class="row">
-	<div class="one columns"></div>
-	<div class="eleven columns">
-		<p class="strong">Safe, effective surgery globally</p>
-		<p>
-			Did you know XX% of the world die or are disabled due to lack of access to surgery
-		</p>
-	</div>
-</div>
-<div class="row vert-pad">
-	<div class="one columns"></div>
-	<div class="eleven columns">
-		<p class="strong">Safe, clean and effective hospital systems</p>
-		<p>
-			Did you know that in most developing countries the ratio of access to a functional hospital is XX per XX population, in comparison the hospital to population ration in San Francisco alone is XX per XX
-		</p>
-	</div>
-</div>
-<div class="row">
-	<div class="one columns"></div>
-	<div class="eleven columns">
-		<p class="strong">Access to rehabilitation and therapy</p>
-		<p>
-			Did you know that XX% of amputees in developing countries have no access to wheelchairs, crutches or rehabilitation
-		</p>
-	</div>
-</div>
-<div class="row vert-pad">
-	<div class="one columns"></div>
-	<div class="eleven columns">
-		<p class="strong">Public policy and resource allocation for surgical systems</p>
-		<p>
-			Did you know that Road Traffic Accidents account for XX% of deaths and disability globally yet only XX countries have established road traffic laws and regulations
-		</p>
-	</div>
-</div>
-<div class="row">
-	<div class="twelve columns">
-		<p>Want to learn more and help us advocate for the festival?  Sign our petition in support of XXX: hyperlink</p>
-	</div>
-</div>
+		<div class="row vert-pad">
+			<div class="twelve columns">
+				<p>
+					Film festivals have the power to bring issues to life, to connect people and motivate the masses.  If the saying “a picture is worth a thousand words” we are hoping a video is worth a million!  
+The Global Health Film Festival is an attempt to bring neglected global health issues to light.  The films and organizations supporting the festival are dedicated to awareness, advocacy and activism to ensure that the below issues have platforms on the greater health agenda locally and globally:
+				</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="one columns"></div>
+			<div class="eleven columns">
+				<p class="strong">Safe, effective surgery globally</p>
+				<p>
+					Did you know XX% of the world die or are disabled due to lack of access to surgery
+				</p>
+			</div>
+		</div>
+		<div class="row vert-pad">
+			<div class="one columns"></div>
+			<div class="eleven columns">
+				<p class="strong">Safe, clean and effective hospital systems</p>
+				<p>
+					Did you know that in most developing countries the ratio of access to a functional hospital is XX per XX population, in comparison the hospital to population ration in San Francisco alone is XX per XX
+				</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="one columns"></div>
+			<div class="eleven columns">
+				<p class="strong">Access to rehabilitation and therapy</p>
+				<p>
+					Did you know that XX% of amputees in developing countries have no access to wheelchairs, crutches or rehabilitation
+				</p>
+			</div>
+		</div>
+		<div class="row vert-pad">
+			<div class="one columns"></div>
+			<div class="eleven columns">
+				<p class="strong">Public policy and resource allocation for surgical systems</p>
+				<p>
+					Did you know that Road Traffic Accidents account for XX% of deaths and disability globally yet only XX countries have established road traffic laws and regulations
+				</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="twelve columns">
+				<p>
+					Want to learn more and help us advocate for the festival?  Sign our petition in support of XXX: hyperlink
+				</p>
+			</div>
+		</div>
 		<script src="javascripts/jquery.js"></script>
 		<script src="javascripts/foundation.min.js"></script>
 		<script src="javascripts/app.js"></script>
 </body>
-</html>
+	</html>
