--- a/app/index.html
+++ b/app/index.html
@@ -18,75 +18,55 @@
 		<script src="javascripts/modernizr.foundation.js"></script>
 </head>
 <body>
-		<div class="header">
-			<div class="row">
-				<div class="eight columns end">
-					<div class="logo-container"></div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="twelve columns">
-					<div class="navigaton">
-						<ul class="nav-bar">
-							<li class="nav-item active">
-								<a href="index.html">Home</a>
-							</li>
-							<li class="has-flyout nav-item">
-								<a href="about.html">About</a>
-								<a href="about.html" class="flyout-toggle">
-									<span></span>
-								</a>
-								<ul class="flyout">
-									<li>
-										<a href="why.html">Why</a>
-									</li>
-									<li>
-										<a href="who.html">Who We Are</a>
-									</li>
-									<li>
-										<a href="schedule.html">Festival Schedule</a>
-									</li>
-								</ul>
-							</li>
-							<li class="has-flyout nav-item">
-								<a href="submit.html">Submit A Film</a>
-								<a href="submit.html" class="flyout-toggle">
-									<span></span>
-								</a>
-								<ul class="flyout">
-									<li>
-										<a href="instructions.html">Instructions</a>
-									</li>
-									<li>
-										<a href="upload.html">Upload</a>
-									</li>
-								</ul>
-							</li>
-
-							<li class="nav-item">
-								<a href="partners.html">Partners</a>
-							</li>
-							<li class="nav-item">
-								<a href="join.html">Join us</a>
-							</li>
-						</ul>
-					</div>
-				</div>
+	<div class="meta row">
+		<div class="four columns offset-by-eight">
+			<div class="meta-content">
+				<p>This is where our meta content goes</p>
 			</div>
 		</div>
+	</div>
 
-		<div class="content-container">
-			<div class="row">
-				<div class="twelve columns">
-					<div class="content">
-						<h1>Test test test</h1>
-					</div>
-				</div>
+	<div class="header row">
+		<div class="five columns">
+			<div class="logo-container"></div>
+		</div>
+		<div class="seven columns">
+			<ul class="nav">
+				<li class="nav-item active">
+					<a href="index.html">Home</a>
+				</li>
+				<li class="nav-item">
+					<a href="about.html">About</a>
+				</li>
+				<li class="nav-item">
+					<a href="schedule.html">Schedule</a>
+				</li>
+				<li class="nav-item">
+					<a href="submit.html">Submit A Film</a>
+				</li>
+				<li class="nav-item">
+					<a href="join.html">Join us</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+
+	<div class="body row">
+		<div class="twelve columns">
+			<div class="content">
 			</div>
 		</div>
+	</div>
 
-		<script src="javascripts/jquery.js"></script>
-		<script src="javascripts/foundation.min.js"></script>
-		<script src="javascripts/app.js"></script>
+	<div class="footer row">
+		<div class="twelve columns">
+			<div class="content">
+			</div>
+		</div>
+	</div>
+
+	<script src="javascripts/jquery.js"></script>
+	<script src="javascripts/foundation.min.js"></script>
+	<script src="javascripts/app.js"></script>
 </body>
-	</html>
+</html>
